--- a/First.html
+++ b/First.html
@@ -40,25 +40,25 @@
     </table>
     <script>
       const students = [
-        { id: 1, name: "Amar", marks: 78, department: "CSE" },
+        { id: 1, name: "Naveen", marks: 76, department: "CSE" },
 
-        { id: 2, name: "Varsha", marks: 92, department: "ECE" },
+        { id: 2, name: "Varsha", marks: 82, department: "ECE" },
 
-        { id: 3, name: "Ramu", marks: 45, department: "MECH" },
+        { id: 3, name: "Ragav", marks: 55, department: "MECH" },
 
-        { id: 4, name: "Sai", marks: 66, department: "CSE" },
+        { id: 4, name: "Srikanth", marks: 67, department: "CSE" },
 
-        { id: 5, name: "Keerthi", marks: 88, department: "ECE" },
+        { id: 5, name: "Kiran", marks: 98, department: "ECE" },
 
-        { id: 6, name: "Venkat", marks: 58, department: "CSE" },
+        { id: 6, name: "Venky", marks: 77, department: "CSE" },
 
-        { id: 7, name: "Manu", marks: 38, department: "EEE" },
+        { id: 7, name: "Mansoor", marks: 36, department: "EEE" },
 
-        { id: 8, name: "Susmitha", marks: 48, department: "CSE" },
+        { id: 8, name: "Sai teja", marks: 47, department: "CSE" },
 
-        { id: 9, name: "Kiran", marks: 67, department: "ECE" },
+        { id: 9, name: "Kamal", marks: 67, department: "ECE" },
 
-        { id: 10, name: "Rakesh", marks: 48, department: "EEE" },
+        { id: 10, name: "Rocky", marks: 43, department: "EEE" },
       ];
       const element = document.getElementById("items");
       document.querySelector("#display").innerHTML = ` Display Content<hr>`;
